<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello Android, me awesome!</string>
    <string name="app_name">BedBuzz</string>
 	<string name="alarms">Alarms</string>
 	<string name="help">Help</string>
 	<string name="add_alarm">Add Alarm</string>
 	<string name="alarm_name">Alarm Name</string>
 	<string name="cancel">Cancel</string>
 	<string name="save">Save</string>
 	<string name="compose">Compose</string>
 	<string name="test">Test</string>
 	<string name="send">Send</string>
 	<string name="usfemale">US Female</string>
 	<string name="usmale">US Male</string>
 	<string name="ukfemale">UK Female</string>
 	<string name="changeVoice">Change Voice</string>
 	<string name="sendMessage">Send Wake Up Message</string>
 	<string name="RSSFeeds">RSS Feeds</string>
 	<string name="settings">Settings</string>
 	<string name="subscribe">Subscribe</string>
 	<string name="changeTheme">Change Theme</string>
 	<string name="add_rss">Add RSS feed</string>
 	<string name="feed_name">RSS Feed Name</string>
 	<string name="feed_URL">RSS Feed URL (must end in .rss)</string>
 	<string name="celcius">Celcius</string>
 	<string name="fahrenheit">Fahrenheit</string>
 	<string name="tempScale">Temperature Scale:</string>
 	<string name="generatingPlzWait">Generating sounds....     Please wait</string>
 	<string name="snoozeLength">Snooze Length:</string>
 	<string name="yes">Yes</string>
 	<string name="notNow">Not now</string>
 	<string name="wakeUpQuestions">With BedBuzz, you can wake up your friends in the morning!  Do you want to send a wake up message now?</string>
 	<string name="fromMic">From Microphone</string>
 	<string name="textToSpeech">Text to speech</string>
 	
 	
 	 <string-array name="snooze_length_array">
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
    </string-array>
</resources>