<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tempScaleLbl"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:text="@string/tempScale"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/tempScaleRdoGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/fahrenheitRdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit" />

            <RadioButton
                android:id="@+id/celciusRdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celcius" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prevent Device Sleeping?"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ToggleButton
            android:id="@+id/useWakeLockTgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snoozeLength"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/snoozeLengthDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

         <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="24 hr mode?"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        
         <ToggleButton
            android:id="@+id/use24HrTgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your user ID is:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/userIDTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textView1"
                android:text="123"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
        
         

            <TextView
                android:id="@+id/expiresLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your subscription expires on:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/expiresDateLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
         <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Review Code:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >

             <EditText
                 android:id="@+id/reviewCodeTxt"
                 android:layout_width="204dp"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
                 android:inputType="textNoSuggestions" >

             </EditText>

             <Button
                 android:id="@+id/submitReviewCodeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/reviewCodeTxt"
                 android:text="Submit" />

             <ProgressBar
                 android:id="@+id/reviewCodeWaitSpinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginRight="40dp" />

         </RelativeLayout>

    </LinearLayout>

</ScrollView>