<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/scroll" android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/alarmNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alarm Time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TimePicker
        android:id="@+id/alarmTimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Music"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/musicFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Music Chosen"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/selectMusicBtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="Select Music" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Days"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/mondayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mon" />

        <CheckBox
            android:id="@+id/tuesdayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tue" />

        <CheckBox
            android:id="@+id/wednesdayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wed" />
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.17">

        <CheckBox
            android:id="@+id/thursdayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Thurs" />

        <CheckBox
            android:id="@+id/fridayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fri" />

        <CheckBox
            android:id="@+id/saturdayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sat" />

        <CheckBox
            android:id="@+id/sundayChk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sun" />
    </LinearLayout>
    
	 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@android:style/ButtonBar">

        <Button android:id="@+id/CancelAlarmBtn"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"/>
        
		 <Button android:id="@+id/SaveAlarmBtn"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>